lang2/macro/tests/ui/fail/11-unsafe-constructor.stderr
error: `unsafe fn` is not supported for ink! functions
  --> $DIR/11-unsafe-constructor.rs:10:9
   |
10 |         unsafe fn invalid_return(&mut self) {}
   |         ^^^^^^
